# semantic-dsl

./: .cruft.json  LICENSE  Makefile  README.md  about.yaml  datamodel.html  genindex.html  index.html  overview.html  pyproject.toml  search.html  tox.ini
.github/workflows/: deploy-docs.yml  qc.yml
_sources/: modules.rst.txt
docs/api/: semdsl.dsl_engine.DSLEngine.rst
docs/source/: conf.py  datamodel.rst  index.rst  overview.md
doctrees/: datamodel.doctree  environment.pickle  index.doctree  modules.doctree  overview.doctree
examples/arithmetic/: __init__.py  model_arithmetic.py
examples/clue/: __init__.py  example.clue.txt  model_clue.yaml  model_clue_semantic.yaml
examples/linkml_lite/: example.linkml.txt
html/: .buildinfo  modules.html  objects.inv  py-modindex.html  searchindex.js
html/_modules/: index.html
project/docs/: AtomicSequence.md  Disjunction.md  Grammar.md  GrammarSyntaxType.md  GrammarType.md  NonTerminal.md  ParserType.md  ProductionRule.md  Sequence.md  Symbol.md  Terminal.md  alias.md  description.md  elements.md  grammar__description.md  grammar__expressivity.md  grammar__parser.md  grammar__pragmas.md  grammar__rules.md  grammar__start_symbols.md  grammar__syntax.md  is_terminal.md  lhs.md  lhs_symbol.md  name.md  operands.md  prodrules.md  rhs.md  source_class.md  source_slot.md  type.md  value.md
project/graphql/: prodrules.graphql
project/jsonld/: prodrules.context.jsonld  prodrules.jsonld
project/jsonschema/: prodrules.schema.json
project/owl/: prodrules.owl.ttl
tests/: __init__.py  test_cli.py  test_engine.py
(+29 files in other folders)
