[tool.poetry]
name = "semdsl"
version = "0.0.0"
description = "semdsl"
authors = ["LinkML Developers"]
license = "BSD-3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
lark = "^1.1.5"
linkml-runtime = ">=1.5.0"
inflection = "^0.5.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
linkml = "^1.5.0"
sphinxcontrib-mermaid = "^0.7.1"
sphinx-automodapi = "*"

[tool.poetry.scripts]
semdsl = "semdsl.cli:main"

[tool.poetry.extras]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "sphinx-autodoc-typehints",
    "sphinx-automodapi",
    "sphinx-click",
    "myst-parser",
    "sphinxcontrib-mermaid"
    ]

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310"]

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100
include_trailing_comma = true
reverse_relative = true

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"
